--- a/src/main/resources/templates/listaconvidados.html
+++ b/src/main/resources/templates/listaconvidados.html
@@ -1,11 +1,29 @@
 <!DOCTYPE html>
 <html xmlns:th="http://www.thymeleaf.org">
 	<head>
-		<meta charset="UTF-8" />
-		<title>Insert title here</title>
+		<meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
+	    <title>ListaVIP</title>
+    	<link href="bootstrap/css/bootstrap.min.css" rel="stylesheet" />
 	</head>
 	<body>
-		<h1>Lista de convidados</h1>
-		<span th:text="${convidados}"></span>
+		<div class="container">
+			<h1>Lista de convidados</h1>
+			<div id="listaDeConvidados">
+				<table class="table table-hover">
+					<thead>
+						<tr>
+							<th>Nome</th>
+							<th>Email</th>
+							<th>Telefone</th>
+						</tr>
+					</thead>
+					<tr th:each="convidado : ${convidados}">
+						<td><span th:text="${convidado.nome}"></span></td>
+						<td><span th:text="${convidado.email}"></span></td>
+						<td><span th:text="${convidado.telefone}"></span></td>
+					</tr>
+				</table>
+			</div>
+		</div>
 	</body>
 </html>
