--- a/src/main/resources/templates/listaconvidados.html
+++ b/src/main/resources/templates/listaconvidados.html
@@ -24,6 +24,22 @@
 					</tr>
 				</table>
 			</div>
+			<hr>
+			<form action="#" th:action="@{/salvar}" method="post" th:object="${convidado}">
+				<div class="form-group">
+					<label for="nome">Nome</label>
+					<input type="text" class="form-control" th:field="*{nome}" />
+				</div>
+				<div class="form-group">
+					<label for="email">Email</label>
+					<input type="text" class="form-control" th:field="*{email}" />
+				</div>
+				<div class="form-group">
+					<label for="telefone">Telefone</label>
+					<input type="text" class="form-control" th:field="*{telefone}" />
+				</div>
+				<button type="submit" class="btn btn-success">Convidar</button>
+			</form>
 		</div>
 	</body>
 </html>
